[gd_scene load_steps=4 format=3 uid="uid://bnqa3d4ofly5k"]

[ext_resource type="Script" path="res://Scripts/Settings.gd" id="1_6knbh"]
[ext_resource type="Theme" uid="uid://lq11vreljnaq" path="res://Resources/Themes/Menu_Button.tres" id="2_bow0q"]
[ext_resource type="FontFile" uid="uid://xjlrmstlfcsx" path="res://Resources/Themes/PixelOperator8-Bold.ttf" id="3_mbofv"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6knbh")

[node name="Settings" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 240.0
offset_top = 135.0
offset_right = 1680.0
offset_bottom = 945.0

[node name="TabContainer" type="TabContainer" parent="Settings"]
layout_mode = 2
theme = ExtResource("2_bow0q")
theme_override_fonts/font = ExtResource("3_mbofv")
tab_alignment = 1
current_tab = 0

[node name="General" type="TabBar" parent="Settings/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="Settings/TabContainer/General"]
layout_mode = 0
offset_left = 20.0
offset_right = 1420.0
offset_bottom = 40.0

[node name="Fullscreen" type="OptionButton" parent="Settings/TabContainer/General/MarginContainer"]
layout_mode = 2
alignment = 1
selected = 0
item_count = 2
popup/item_0/text = "Windowed"
popup/item_1/text = "Fullscreen"
popup/item_1/id = 1

[node name="Video" type="TabBar" parent="Settings/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Audio" type="TabBar" parent="Settings/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Controls" type="TabBar" parent="Settings/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 240.0
offset_top = 941.0
offset_right = 1680.0
offset_bottom = 997.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme = ExtResource("2_bow0q")
alignment = 1

[node name="Save" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="Apply" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Apply"

[node name="Close" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Close"

[connection signal="item_selected" from="Settings/TabContainer/General/MarginContainer/Fullscreen" to="." method="_on_fullscreen_item_selected"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/Apply" to="." method="_on_apply_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/Close" to="." method="_on_close_pressed"]
